# chess-bot

./: .gitignore  README.md  pyproject.toml
src/chessbot/: __init__.py  blunder.py  config.py  dataset.py  download.py  encoding.py  engine.py  lichess_bot.py  model.py  train.py  uci.py
tests/: test_blunder.py  test_encoding.py
